images fixed and slight change to cdontent spacing

--- a/EastSidePockets/esp_styles.css
+++ b/EastSidePockets/esp_styles.css
@@ -60,7 +60,7 @@ html, body {
 .menu-area {
     display: flex;
     flex-direction: column;
-    width: 75%;
+    width: 80%;
     height: 100%;
 }
 
@@ -222,7 +222,7 @@ html, body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 35%;
+    width: 20%;
     border-left: solid 3px #28442D;
     padding-top: 2%;
     padding-bottom: 2%;
@@ -241,6 +241,16 @@ html, body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+@media (max-width: 1450px) {
+    .cart-area {
+        width: 35%;
+    }
+
+    .menu-area {
+        width: 75%;
+    }
 }
 
 @media (max-width: 768px) {
